--- a/templates/list.html
+++ b/templates/list.html
@@ -3,19 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Questions</title>
+        <style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
 </head>
 <body>
     <h1>Questions</h1><br>
     <table>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
+        {% for question in questions %}
+            {% if question == questions[0] %}
+            <tr>
+                <th>{{ question['id'] }}</th>
+                <th>{{ question['submission_time'] }}</th>
+                <th>{{ question['view_number'] }}</th>
+                <th>{{ question['vote_number'] }}</th>
+                <th>{{ question['title'] }}</th>
+                <th>{{ question['message'] }}</th>
+                <th>{{ question['image'] }}</th>
+            </tr>
+            {% else %}
+            <tr>
+                <td>{{ question['id'] }}</td>
+                <td>{{ question['submission_time'] }}</td>
+                <td>{{ question['view_number'] }}</td>
+                <td>{{ question['vote_number'] }}</td>
+                <td>{{ question['title'] }}</td>
+                <td>{{ question['message'] }}</td>
+                <td>{{ question['image'] }}</td>
+            </tr>
+            {% endif %}
+        {% endfor %}
     </table>
 
 
