--- a/templates/list.html
+++ b/templates/list.html
@@ -35,7 +35,7 @@ tr:nth-child(even) {
         </tr>
         {% for question in questions %}
             <tr>
-                <td>{{ question['id'] }}</td>
+                <td><a href="/question/<question_id>">{{ question['id'] }}</a></td>
                 <td>{{ question['submission_time'] }}</td>
                 <td>{{ question['view_number'] }}</td>
                 <td>{{ question['vote_number'] }}</td>
