--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <h1>Any questions?</h1><br>
-<form method="post">
+    <form method="post">
 
-    <label for="title">Issue</labelfor>
-        <input><br><br>
+    <label for="title">Issue</label><br>
+        <input><br>
 
-    <label for="question">How can we help?</label>
+    <label for="question">How can we help?</label><br>
         <textarea></textarea><br><br>
 
     <button type="submit">Submit question</button>
