Make minor changes to add-question.html
A button was added in order to return to main menu faster.
A few labels were changed, the commit is self-explanatory on that matter.

--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -6,16 +6,17 @@
 </head>
 <body>
     <h1>Any questions?</h1><br>
-    <form method="post">
+    <form method="POST">
 
-    <label for="title">Issue</label><br>
-        <input><br>
+    <label for="issue">Issue</label><br>
+        <input type="text" id="issue" name="issue"><br>
 
     <label for="question">How can we help?</label><br>
-        <textarea></textarea><br><br>
+        <textarea id="question" name="question"></textarea><br>
 
     <button type="submit">Submit question</button>
-
 </form>
+    <br>
+<a href='/'><button class=grey>Return to Main Page</button></a><br>
 </body>
 </html>
