--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -9,10 +9,10 @@
     <form method="POST">
 
     <label for="issue">Issue</label><br>
-        <input type="text" id="issue" name="issue"><br>
+        <input type="text" id="issue" name="issue" placeholder="Issue title" required><br>
 
     <label for="question">How can we help?</label><br>
-        <textarea id="question" name="question"></textarea><br>
+        <textarea id="question" name="question" placeholder="Write a question here..." required></textarea><br>
 
     <button type="submit">Submit question</button>
 </form>
