add answer almost implemented

--- a/templates/new_answer.html
+++ b/templates/new_answer.html
@@ -10,3 +10,5 @@
     <textarea name="message" minlength="5" rows="15" cols="60" placeholder="Write your answer here..." required></textarea><br>
     <button type="submit">Submit your answer</button>
 </form>
+</body>
+</html>
