--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -32,6 +32,13 @@
         <td>{{ question['title'] }}</td>
         <td>{{ question['message'] }}</td>
     </tr>
+    {% if answers %}
+        {% for answer in answers %}
+        <tr>
+            <td>{{ answer["message"] }}</td>
+        </tr>
+        {% endfor %}
+    {% endif %}
 </table><br>
 <a href="/">Back to main page</a><br>
 <a href="{{ url_for("route_add_answer", question_id=question_id) }}">Write an answer</a>
