--- a/templates/list.html
+++ b/templates/list.html
@@ -23,6 +23,25 @@
 </head>
 <body>
     <h1>Questions</h1><br>
+    <form method="POST" action="/">
+        <label for="options">Options</label>
+            <select name="options" id="options">
+                <optgroup label="header" id="header">
+                    <option value="id">ID</option>
+                    <option value="submission_time">Submission time</option>
+                    <option value="view_number">View number</option>
+                    <option value="vote_number">Vote number</option>
+                    <option value="title">Title</option>
+                    <option value="message">Message</option>
+                    <option value="image">Image</option>
+                </optgroup>
+                <optgroup label="Asc_or_Desc" id="Asc_or_Desc">
+                    <option value="ascending">Ascending</option>
+                    <option value="descending">Descending</option>
+                </optgroup>
+            </select>
+    </form>
+
     <table>
         <tr>
         <th>{{ header['id'] }}</th>
