--- a/templates/list.html
+++ b/templates/list.html
@@ -6,6 +6,7 @@
     <style type="text/css">
         #element1 {display:inline-block; width:6%; padding:10px}
         #element2 {display:inline-block; width:6%; padding:10px}
+        #element3 {display:inline-block; width:6%; padding:10px}
 </style>
     <style>
         table {
@@ -39,17 +40,19 @@
         <option value="message">Message</option>
         <option value="image">Image</option>
     </select>
-</form>
 </div>
 <div id="element2">
-<form method="POST" action="/">
+<div method="POST" action="/">
     <label for="asc_or_desc">Order</label><br>
     <select name="asc_or_desc" id="asc_or_desc">
         <option value="ascending">Ascending</option>
         <option value="descending">Descending</option>
     </select>
-</form>
 </div>
+    <div id="element3">
+    <input type="submit" value="Submit">
+    </div>
+</form>
 
 <table>
     <tr>
@@ -72,6 +75,7 @@
             <td>{{ question['image'] }}</td>
         </tr>
     {% endfor %}
+
 </table>
 <a href="/add-questions">Fire away!</a>
 
