vote on answer implemented

--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -45,7 +45,7 @@
             <td>{{ answer["message"] }}</td>
             <td>{{ answer["vote_number"]}}</td>
             <td><a href="/answer/{{ answer['id'] }}/vote_up">Vote up</a></td>
-            <td><a href="/answer/{{ answer['id'] }}/vote_up">Vote down</a></td>
+            <td><a href="/answer/{{ answer['id'] }}/vote_down">Vote down</a></td>
 
         </tr>
         {% endfor %}
