add img started

--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -14,8 +14,11 @@
     <label for="question">How can we help?</label><br>
         <textarea id="question" name="question" placeholder="Write a question here..." required></textarea><br>
 
+    <label for="pic">Select a file:</label>
+    <input type="file" id="pic" name="pic">
+
     <button type="submit">Submit question</button>
-</form>
+    </form>
     <br>
 <a href='/'><button class=grey>Return to Main Page</button></a><br>
 </body>
