delete question, delete answer okay, TODO: delete answer by id

--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -36,6 +36,7 @@
         {% for answer in answers %}
         <tr>
             <td>{{ answer["message"] }}</td>
+            <form name="answer_id"><td><a href="/question/{{ question['id'] }}">Del</a></td></form>
         </tr>
         {% endfor %}
     {% endif %}
