Minor aesthetical changes in the layout

--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -9,15 +9,13 @@
     <form method="POST">
 
     <label for="issue">Issue</label><br>
-        <input type="text" id="issue" name="issue" placeholder="Issue title" required><br>
+        <input type="text" id="issue" name="issue" placeholder="Issue title" required><br><br>
 
     <label for="question">How can we help?</label><br>
         <textarea id="question" name="question" placeholder="Write a question here..." required></textarea><br>
-
-    <label for="pic">Select a file:</label>
+    <button type="submit">Submit question</button><br><br>
+    <label for="pic">Select a file:</label><br>
     <input type="file" id="pic" name="pic">
-
-    <button type="submit">Submit question</button>
     </form>
     <br>
 <a href='/'><button class=grey>Return to Main Page</button></a><br>
