--- a/templates/list.html
+++ b/templates/list.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-<h1>Questions</h1><br>
+<h1>Askm8</h1><br>
 <form method="POST" action="/">
     <div id="element1">
     <label for="option">Options</label><br>
