--- a/templates/list.html
+++ b/templates/list.html
@@ -9,6 +9,14 @@
         #element3 {display:inline-block; width:6%; padding:10px}
 </style>
     <style>
+        body {
+            background-color: #bbd1aa;
+        }
+
+        h1 {
+            color: #0d420c;
+        }
+
         table {
             font-family: arial, sans-serif;
             border-collapse: collapse;
@@ -16,13 +24,13 @@
         }
 
         td, th {
-            border: 1px solid #dddddd;
+            border: 1px solid #e0e2e1;
             text-align: left;
             padding: 8px;
         }
 
         tr:nth-child(even) {
-            background-color: #dddddd;
+            background-color: #328f6c;
         }
     </style>
 </head>
@@ -77,7 +85,9 @@
     {% endfor %}
 
 </table>
-<a href="/add-questions">Fire away!</a>
-
+<br>
+<form action="/add-questions">
+    <button type="submit">Fire away!</button>
+</form>
 </body>
 </html>
