--- a/templates/list.html
+++ b/templates/list.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Questions</title>
+        <style>
+        body
+        {
+        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
+        background-size: cover;
+        }
+    </style>
     <style type="text/css">
         #element1 {display:inline-block; width:6%; padding:10px}
         #element2 {display:inline-block; width:6%; padding:10px}
