--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Question {{  question_id }}</title>
         <style>
+        body
+        {
+        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
+        background-size: cover;
+        }
+    </style>
+        <style>
         body {
             background-color: #bbd1aa;
         }
