--- a/templates/edit_question.html
+++ b/templates/edit_question.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Edit</title>
+        <style>
+        body
+        {
+        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
+        background-size: cover;
+        }
+    </style>
     <style>
         body {
             background-color: #bbd1aa;
