--- a/templates/new_answer.html
+++ b/templates/new_answer.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>New answer for question {{ question_id }}</title>
+        <style>
+        body
+        {
+        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
+        background-size: cover;
+        }
+    </style>
     <style>
         body {
             background-color: #bbd1aa;
