--- a/templates/delete_question.html
+++ b/templates/delete_question.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <title>Delete question</title>
     <style>
-        body {
-            background-color: #bbd1aa;
+        body
+        {
+        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
+        background-size: cover;
         }
-
+    </style>
+    <style>
         h1 {
             color: #0d420c;
         }
