--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>How can we help?</title>
-<<<<<<< HEAD
     <style>
         body
         {
@@ -36,26 +35,17 @@
             background-color: #328f6c;
         }
     </style>
-=======
->>>>>>> f5506f27cdc7a4c03edcc2bf011207fae04e0a33
 </head>
 <body>
     <h1>Any questions?</h1><br>
-    <form method="POST" class="col-12" enctype="multipart/form-data">
+    <form method="POST">
 
     <label for="issue">Issue</label><br>
         <input type="text" id="issue" name="issue" placeholder="Issue title" required><br><br>
 
     <label for="question">How can we help?</label><br>
-<<<<<<< HEAD
         <textarea id="question" name="question" placeholder="Write a question here..." required></textarea><br>
     <button type="submit">Submit question</button><br><br>
-=======
-        <textarea id="question" name="question" placeholder="Write a question here..." required></textarea><br><br>
-        <label for="input-id">Upload a picture:</label><br><br>
-              <input id="input-id" type="file" name="photo" class="file form-control" multiple data-preview-file-type="text" data-allowed-file-extensions='["png", "jpg"]'><br><br>
-        <button type="submit">Submit question</button><br><br>
->>>>>>> f5506f27cdc7a4c03edcc2bf011207fae04e0a33
     </form>
     <br>
 <a href='/'><button class=grey>Return to Main Page</button></a><br>
