Revert "Background added"
This reverts commit fd3b97a5f4c833121d9dc3ae8a5ab636f254b32f.

Revert changes

--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8">
     <title>How can we help?</title>
     <style>
-        body
-        {
-        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
-        background-size: cover;
-        }
-    </style>
-    <style>
         body {
             background-color: #bbd1aa;
         }
@@ -46,6 +39,8 @@
     <label for="question">How can we help?</label><br>
         <textarea id="question" name="question" placeholder="Write a question here..." required></textarea><br>
     <button type="submit">Submit question</button><br><br>
+    <label for="pic">Select a file:</label><br>
+    <input type="file" id="pic" name="pic">
     </form>
     <br>
 <a href='/'><button class=grey>Return to Main Page</button></a><br>
