--- a/templates/delete_question.html
+++ b/templates/delete_question.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <title>Delete question</title>
     <style>
-        body
-        {
-        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
-        background-size: cover;
+        body {
+            background-color: #bbd1aa;
         }
-    </style>
-    <style>
+
         h1 {
             color: #0d420c;
         }
