Revert "some css, some order"
This reverts commit 7b8f4b9dcec353418fae36d405c5c093e05b072c.

--- a/templates/edit_question.html
+++ b/templates/edit_question.html
@@ -4,28 +4,20 @@
   <meta charset="UTF-8">
   <title>Edit</title>
     <style>
-        body {
-            background-color: #bbd1aa;
-        }
-
-        h1 {
-            color: #0d420c;
-        }
-
         table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
+          font-family: arial, sans-serif;
+          border-collapse: collapse;
+          width: 100%;
         }
 
         td, th {
-            border: 1px solid #e0e2e1;
-            text-align: left;
-            padding: 8px;
+          border: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
         }
 
         tr:nth-child(even) {
-            background-color: #328f6c;
+          background-color: #dddddd;
         }
     </style>
 </head>
