--- a/templates/delete_question.html
+++ b/templates/delete_question.html
@@ -3,40 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Delete question</title>
-    <style>
-        body {
-            background-color: #bbd1aa;
-        }
-
-        h1 {
-            color: #0d420c;
-        }
-
-        table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        td, th {
-            border: 1px solid #e0e2e1;
-            text-align: left;
-            padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #328f6c;
-        }
-    </style>
 </head>
 <body>
-<h3>You are going to delete this question. Are you sure?</h3>
+<p>You are going to delete this question. Are you sure?</p>
 <form action="{{ url_for("delete_question", question_id=question_id) }}" method="POST">
     <button type="submit">100% SURE</button>
 </form>
-<br>
-<form action="{{ url_for("display_a_question", question_id=question_id) }}">
-<button type="submit">Not Sure</button>
-</form>
+<p><a href="{{ url_for("display_a_question", question_id=question_id) }}" >HELL NO! Go back to question page.</a></p>
 </body>
 </html>
