--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -3,29 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Question {{  question_id }}</title>
-        <style>
-        body {
-            background-color: #bbd1aa;
-        }
-
-        h1 {
-            color: #0d420c;
-        }
-
+    <style>
         table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
+          font-family: arial, sans-serif;
+          border-collapse: collapse;
+          width: 100%;
         }
-
         td, th {
-            border: 1px solid #e0e2e1;
-            text-align: left;
-            padding: 8px;
+          border: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
         }
-
         tr:nth-child(even) {
-            background-color: #328f6c;
+          background-color: #dddddd;
         }
     </style>
 </head>
