--- a/templates/list.html
+++ b/templates/list.html
@@ -9,14 +9,6 @@
         #element3 {display:inline-block; width:6%; padding:10px}
 </style>
     <style>
-        body {
-            background-color: #bbd1aa;
-        }
-
-        h1 {
-            color: #0d420c;
-        }
-
         table {
             font-family: arial, sans-serif;
             border-collapse: collapse;
@@ -24,13 +16,13 @@
         }
 
         td, th {
-            border: 1px solid #e0e2e1;
+            border: 1px solid #dddddd;
             text-align: left;
             padding: 8px;
         }
 
         tr:nth-child(even) {
-            background-color: #328f6c;
+            background-color: #dddddd;
         }
     </style>
 </head>
@@ -85,9 +77,7 @@
     {% endfor %}
 
 </table>
-<br>
-<form action="/add-questions">
-    <button type="submit">Fire away!</button>
-</form>
+<a href="/add-questions">Fire away!</a>
+
 </body>
 </html>
