--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -3,6 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>How can we help?</title>
+    <style>
+        body
+        {
+        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
+        background-size: cover;
+        }
+    </style>
+    <style>
+        body {
+            background-color: #bbd1aa;
+        }
+
+        h1 {
+            color: #0d420c;
+        }
+
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td, th {
+            border: 1px solid #e0e2e1;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #328f6c;
+        }
+    </style>
 </head>
 <body>
     <h1>Any questions?</h1><br>
@@ -14,8 +46,6 @@
     <label for="question">How can we help?</label><br>
         <textarea id="question" name="question" placeholder="Write a question here..." required></textarea><br>
     <button type="submit">Submit question</button><br><br>
-    <label for="pic">Select a file:</label><br>
-    <input type="file" id="pic" name="pic">
     </form>
     <br>
 <a href='/'><button class=grey>Return to Main Page</button></a><br>
