Add image links to html with error handling

--- a/templates/list.html
+++ b/templates/list.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Questions</title>
+    <style>
+        img {
+          border: 1px solid #ddd; /* Gray border */
+          border-radius: 4px;  /* Rounded border */
+          padding: 5px; /* Some padding */
+          width: 150px; /* Set a small width */
+        }
+        
+        /* Add a hover effect (blue shadow) */
+        img:hover {
+          box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+        }
+        </style>
         <style>
         body
         {
@@ -84,7 +97,7 @@
             <td>{{ question['vote_number'] }}</td>
             <td>{{ question['title'] }}</td>
             <td>{{ question['message'] }}</td>
-            <td>{{ question['image'] }}</td>
+            <td><img src= {{ question['image'] }} alt="" onerror="this.style.display='none'"></td>
             <td><a href="/question/{{ question['id'] }}/vote_up">Vote up</a></td>
             <td><a href="/question/{{ question['id'] }}/vote_down">Vote down</a></td>
         </tr>
