delete answer feature fully working

--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -66,6 +66,7 @@
         {% endfor %}
     {% endif %}
 </table><br>
+<a href="{{ url_for("route_add_answer", question_id=question_id) }}">Write an answer</a><br>
 <a href="/">Back to main page</a><br>
 </body>
 </html>
