--- a/templates/delete_question.html
+++ b/templates/delete_question.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-<h3>You are going to delete this question. Are you sure?</h3>
+<h3>You are going to delete. Are you sure?</h3>
 <form action="{{ url_for("delete_question", question_id=question_id) }}" method="POST">
     <button type="submit">100% SURE</button>
 </form>
