--- a/templates/new_answer.html
+++ b/templates/new_answer.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-<h1>Write a correct answer</h1>
+<h1>Write an answer m8</h1>
 <form method="POST">
     <textarea name="message" minlength="5" rows="15" cols="60" placeholder="Write your answer here..." required></textarea><br>
     <button type="submit">Submit your answer</button>
