Search feature implemented

--- a/templates/list.html
+++ b/templates/list.html
@@ -108,6 +108,10 @@
 
 </table>
 <br>
+<form method="GET" action="/search">
+    <input name="phrase" id="phrase" type="text" placeholder="Looking for something?">
+    <button type="submit">Search</button>
+</form>
 <form method="GET" action="/add_questions">
     <button type="submit">Fire away!</button>
 </form>
