Add upload function to add-question page

--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -42,23 +42,14 @@
     <h1>Do you have a question m8?</h1><br>
    <form action="{{ url_for("add_question") }}", method="POST">
         <p>Question title<br>
-        <input type="text" name="title" required minlength="10" size="51">
-        </p>
-    <h1>Do you have a question m8?</h1><br>
-   <form action="{{ url_for("add_question") }}", method="POST">
-        <p>Question title<br>
         <input type="text" name="title" required minlength="5" size="51">
         </p>
-
-        <p>Question message<br>
-        <textarea cols="50" rows="10" name="message" autofocus required minlength="10"></textarea>
-        </p>
-        <br>
-        <button type="submit">Submit</button>
         <p>Question message<br>
         <textarea cols="50" rows="10" name="message" autofocus required minlength="5"></textarea>
         </p>
         <br>
+        <label for="input-id">Upload a picture:</label><br><br>
+        <input id="input-id" type="file" name="photo" class="file form-control" multiple data-preview-file-type="text" data-allowed-file-extensions='["png", "jpg"]'><br><br>
         <button type="submit">Submit</button>
     </form>
     <br>
