--- a/templates/edit_question.html
+++ b/templates/edit_question.html
@@ -44,7 +44,8 @@
 
         <label for="message">Message:</label><br>
         <textarea id="message:" name="message" rows="15" cols="60">{{ question['message'] }}</textarea><br><br>
-
+        <label for="input-id">Upload a picture:</label><br><br>
+        <input id="input-id" type="file" name="photo" class="file form-control" multiple data-preview-file-type="text" data-allowed-file-extensions='["png", "jpg"]'><br><br>
         <button type="submit">Edit</button>
     </form>
 </body>
