--- a/templates/edit_answer.html
+++ b/templates/edit_answer.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <h1>Edit question</h1><br><br>
+    <h1>Edit answer</h1><br><br>
     <form method="POST" action="{{ url_for('edit_answer', answer_id=answer_id) }}">
         <label for="message">Message:</label><br>
         <textarea id="message:" name="message" rows="15" cols="60">{{ answer['message'] }}</textarea><br><br>
