--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -63,6 +63,7 @@
             <td><a href="/answer/{{ answer['id'] }}/vote_up">Vote up</a></td>
             <td><a href="/answer/{{ answer['id'] }}/vote_down">Vote down</a></td>
             <td><a href="/answer/{{ answer['id'] }}/delete">Delete</a></td>
+            <td><a href="{{ url_for('edit_answer', answer_id=answer["id"], question_id=question_id) }}">Edit</a></td>
         </tr>
         {% endfor %}
     {% endif %}
