--- a/templates/edit_answer.html
+++ b/templates/edit_answer.html
@@ -38,9 +38,13 @@
 </head>
 <body>
     <h1>Edit answer</h1><br><br>
-    <form method="POST" action="{{ url_for('edit_answer', answer_id=answer_id) }}">
-        <label for="message">Message:</label><br>
-        <textarea id="message:" name="message" rows="15" cols="60">{{ answer['message'] }}</textarea><br><br>
+    <form action="{{ url_for("edit_answer", answer_id=answer_id, question_id=question_id) }}" method="POST">
+        {% for answer in answers %}
+            <p>
+                <textarea name="message" cols="30" rows="10" required>{{ answer["message"] }}</textarea>
+            </p>
+        {% endfor %}
+        <br>
         <button type="submit">Edit</button>
     </form>
 </body>
