--- a/templates/add-question.html
+++ b/templates/add-question.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <h1>Do you have a question m8?</h1><br>
-   <form action="{{ url_for("add_question") }}", method="POST">
+   <form action="{{ url_for("add_question") }}", method="POST" enctype="multipart/form-data">
         <p>Question title<br>
         <input type="text" name="title" required minlength="5" size="51">
         </p>
