--- a/templates/list.html
+++ b/templates/list.html
@@ -115,5 +115,7 @@
 <form method="GET" action="/add_questions">
     <button type="submit">Fire away!</button>
 </form>
+<p><a href="{{ url_for('main') }}">All Questions Asked</a></p>
+<p><a href="{{ url_for('get_last_5_question_ordered_by_time') }}">List 5 latest Question</a></p>
 </body>
 </html>
