--- a/templates/delete_comment_confirmation.html
+++ b/templates/delete_comment_confirmation.html
@@ -35,12 +35,13 @@
 <body>
 <h3>You are going to delete the comment below. Are you sure?</h3>
 <p>{{ comment }}</p>
-<a href="{{ url_for("delete_comment", comment_id=comment_id) }}">
+<form action="/comments/{{ comment_id }}/delete">
+    <input type="hidden" name="question_id" value="{{ question_id }}">
     <button type="submit">100% SURE</button>
-</a>
+</form>
 <br>
 <a href="{{ url_for("display_a_question", question_id=question_id) }}">
-<button type="submit">NOPE</button>
+<button type="button">NOPE</button>
 </a>
 </body>
 </html>
